--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -45,6 +45,8 @@ static=Others, Outside, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh
 available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
 available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
 available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
+#available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/JP.png
+#available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
 
 
 [server_local]
