--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -30,6 +30,7 @@ static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn
 static=Disney+, proxy, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
 static=HBO, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
 static=Emby, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
+static=IPTV, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/ViuTV.png
 #static=Telegram, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Telegram.png
 #static=Microsoft, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Microsoft.png
 #static=PayPal, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/PayPal.png
@@ -81,6 +82,7 @@ https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Mainland.list
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Emby.list, tag=Emby, enabled=true
+https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/IPTV.list, tag=IPTV, enabled=true
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Unbreak.list, tag=Unbreak, enabled=true
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 #https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Hulu/Hulu.list, tag=Hulu, enabled=true
