--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -47,7 +47,7 @@ available=SG-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.ne
 available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
 available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
 #available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/JP.png
-#available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
+available=TW-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
 
 
 [server_local]
