--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -21,7 +21,7 @@ server=182.254.116.116
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 static=Apple, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Apple_1.png
 static=AppStore, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/App_Store.png
-static=Netflix, direct, SG-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
+static=Netflix, direct, SG-Fallback, TW-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
 static=YouTube, direct, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
 static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
