--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -21,13 +21,13 @@ server=182.254.116.116
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
 static=Apple, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Apple_1.png
 static=AppStore, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/App_Store.png
-static=Netflix, direct, SG-Fallback, TW-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
+static=Netflix, NF-Fallback, SG-Fallback, TW-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
-static=YouTube, direct, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
+static=YouTube, YT-Fallback, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
 static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
 #static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Domestic.png
 static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
-static=Disney+, proxy, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
+static=Disney+, DP-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
 static=HBO, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
 static=Emby, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
 static=IPTV, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/ViuTV.png
@@ -48,6 +48,9 @@ available=US-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.ne
 available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
 #available=HK-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/JP.png
 available=TW-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
+available=YT-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/YouTube.png
+available=NF-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Netflix.png
+available=DP-Fallback, proxy-node1, proxy-node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/DisneyPlus.png
 
 
 [server_local]
