--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -24,6 +24,7 @@ static=AppStore, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qu
 static=Netflix, NF-Fallback, SG-Fallback, TW-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
 #static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
 static=YouTube, YT-Fallback, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
+static=Viu, SG-Fallback, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Viu.png
 static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Speedtest.png
 #static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Domestic.png
 static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
@@ -74,6 +75,7 @@ https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/CMedia.list, 
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/Netflix.list, tag=Netflix, enabled=true
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/Spotify.list, tag=Spotify, enabled=true
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/YouTube.list, tag=YouTube, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/ViuTV/ViuTV.list, tag=Viu, enabled=true
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/GMedia.list, tag=GMedia, enabled=true
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/Telegram.list, tag=Telegram, enabled=true
 #https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Optional/Microsoft.list, tag=Microsoft, enabled=true
