--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -29,6 +29,7 @@ static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/min
 #static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Domestic.png
 static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
 static=Disney+, DP-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Disney%2B_1.png
+static=Peacock, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Peacock_1.png
 static=HBO, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/HBO_Max.png
 static=Emby, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
 static=IPTV, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/ViuTV.png
@@ -86,6 +87,7 @@ https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Outside.list,
 https://cdn.jsdelivr.net/gh/GeQ1an/Rules@master/QuantumultX/Filter/Mainland.list, tag=Mainland, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Surge/Peacock/Peacock.list, tag=Peacock, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Emby.list, tag=Emby, enabled=true
 https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/IPTV.list, tag=IPTV, enabled=true
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Unbreak.list, tag=Unbreak, enabled=true
