--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -1944,8 +1944,71 @@ DOMAIN,translate.google.cn,PROXY
 # > bilibili
 DOMAIN-SUFFIX,bilibili.com,⚠️bilibili港澳台专用节点(没有就选DIRECT)
 DOMAIN,upos-hz-mirrorakam.akamaized.net,⚠️bilibili港澳台专用节点(没有就选DIRECT)
+
+
 # > 愛奇藝台灣站
-DOMAIN-SUFFIX,iqiyi.com,⚠️愛奇藝台灣站专用节点(没有就选DIRECT),force-remote-dns
+DOMAIN-SUFFIX,71.am,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,71.am.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,71edge.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,71edge.net,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,aianno.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,aianno.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,aiqiyicloud-mgmt.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,aiqiyicloud.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,aiqiyicloud.net,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,baiying.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,gitv.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,gitv.tv,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ibkstore.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,iq.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns.demo.uwp,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dnsedge.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dnsedge.net,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dnspic.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,jiangbing.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,pps.tv,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppsimg.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppstream.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppstream.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppstream.com.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppstream.net,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppstream.net.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,ppsurl.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,qiyi.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,qiyi.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,qiyipic.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,qy.com,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,qy.net,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-SUFFIX,suike.cn,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+DOMAIN-KEYWORD,qiyi,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+USER-AGENT,PPStream*,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+USER-AGENT,QIYI*,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+USER-AGENT,QYPlayer*,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+USER-AGENT,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns*,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+USER-AGENT,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns*,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,101.224.0.0/13,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,103.44.56.0/22,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,103.5.34.153/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,104.109.129.153/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,110.238.107.47/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,118.26.120.0/24,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,118.26.32.0/23,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,119.176.0.0/12,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,203.211.4.169/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,203.211.4.193/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,203.74.95.131/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,203.74.95.139/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,203.74.95.153/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,210.201.32.11/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,210.201.32.8/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,210.71.227.200/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,210.71.227.202/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,223.119.62.224/28,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,23.211.15.99/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,23.40.241.251/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,23.40.242.10/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
+IP-CIDR,23.53.32.88/32,⚠️愛奇藝台灣站专用节点没有就选DIRECT,force-remote-dns
 
 # > Cloudflare IP ranges
 IP-CIDR,173.245.48.0/20,Cloudflare 专用节点
