--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -707,26 +707,27 @@ DOMAIN-SUFFIX,llnwd.net,Prime_Video 专用节点
 DOMAIN-SUFFIX,media-amazon.com,Prime_Video 专用节点
 DOMAIN-SUFFIX,primevideo.com,Prime_Video 专用节点
 # > Disney+
-USER-AGENT,Disney*,Disney+
-DOMAIN,cdn.registerdisney.go.com,Disney+ 专用节点
-DOMAIN,cdn.cdn.unid.go.com,Disney+ 专用节点
-DOMAIN-SUFFIX,bamgrid.com,Disney+ 专用节点
-DOMAIN-SUFFIX,braze.com,Disney+ 专用节点
-DOMAIN-SUFFIX,conviva.com,Disney+ 专用节点
-DOMAIN-SUFFIX,disney.demdex.net,Disney+ 专用节点
-DOMAIN-SUFFIX,disneyplus.com,Disney+ 专用节点
-DOMAIN-SUFFIX,disney-plus.net,Disney+ 专用节点
-DOMAIN-SUFFIX,dssott.com,Disney+ 专用节点
-DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,Disney+ 专用节点
-DOMAIN-SUFFIX,adobedtm.com,Disney+ 专用节点
-DOMAIN-SUFFIX,bam.nr-data.net,Disney+ 专用节点
-DOMAIN-SUFFIX,cdn.optimizely.com,Disney+ 专用节点
-DOMAIN-SUFFIX,d9.flashtalking.com,Disney+ 专用节点
-DOMAIN-SUFFIX,disney.my.sentry.io,Disney+ 专用节点
-DOMAIN-SUFFIX,disneyplus.bn5x.net,Disney+ 专用节点
-DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,Disney+ 专用节点
-DOMAIN-SUFFIX,disney-portal.my.onetrust.com,Disney+ 专用节点
-DOMAIN-SUFFIX,js-agent.newrelic.com,Disney+ 专用节点
+#USER-AGENT,Disney*,Disney+
+#DOMAIN,cdn.registerdisney.go.com,Disney+ 专用节点
+#DOMAIN,cdn.cdn.unid.go.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,bamgrid.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,braze.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,conviva.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,disney.demdex.net,Disney+ 专用节点
+#DOMAIN-SUFFIX,disneyplus.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,disney-plus.net,Disney+ 专用节点
+#DOMAIN-SUFFIX,dssott.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,adobedtm.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,bam.nr-data.net,Disney+ 专用节点
+#DOMAIN-SUFFIX,cdn.optimizely.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,d9.flashtalking.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,disney.my.sentry.io,Disney+ 专用节点
+#DOMAIN-SUFFIX,disneyplus.bn5x.net,Disney+ 专用节点
+#DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net,Disney+ 专用节点
+#DOMAIN-SUFFIX,disney-portal.my.onetrust.com,Disney+ 专用节点
+#DOMAIN-SUFFIX,js-agent.newrelic.com,Disney+ 专用节点
+
 # > Bahamut
 USER-AGENT,Anime*,Bahamut 专用节点
 DOMAIN-SUFFIX,bahamut.com.tw,Bahamut 专用节点
