--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -58,7 +58,7 @@ static=NF-Switch, 🇹🇼｜SH-TW, 🇹🇼｜SH-TW®, 🇹🇼｜TW2, 🇹🇼
 
 
 [server_remote]
-https://dler.cloud/subscribe/BWSTmBjtVLKuirBu?protocols=smart&list=quantumultx&area=hk+tw+sg#out=CHT+HINET+SEED+HKT+NTT+WTT, tag=DlerCloud, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/Dler.png, update-interval=172800, opt-parser=true, enabled=false
+https://dler.cloud/subscribe/$TOKEN?protocols=smart&list=quantumultx&area=hk+tw+sg#out=CHT+HINET+SEED+HKT+NTT+WTT, tag=DlerCloud, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Alpha/Dler.png, update-interval=172800, opt-parser=true, enabled=false
 http://192.168.123.7/subscribe/quanx/nodelist/mix.list, tag=MixCloud, update-interval=172800, opt-parser=false, enabled=true, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
 #img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Quantumult_X.png
 #img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Lab.png
