--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -44,12 +44,12 @@ static=Speedtest, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Orz-3/min
 static=Outside, proxy, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Global.png
 static=Others, Outside, direct, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Proxy.png
 #static=Cloudflare, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Cloudflare.png
-available=IEPL-Fallback, 🇭🇰｜IEPL-HK3, 🇭🇰｜IEPL-HK2, 🇭🇰｜IEPL-HK1, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/IEPL.png
-available=SG-Fallback, 🇸🇬｜SH-SG®, 🇸🇬｜SH2-SG, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
-available=US-Fallback, 🇺🇸｜SH-US®, 🇺🇸｜SH-US, 🇺🇸｜SH-US2, 🇺🇸｜SH-US2®, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
-available=HK-Fallback, 🇭🇰｜SH-HK1, 🇭🇰｜SH-HK, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
-available=TW-Fallback, 🇹🇼｜SH-TW, 🇹🇼｜SH-TW®, 🇹🇼｜TW2, 🇹🇼｜SH2-TW, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
-static=NF-Switch, 🇹🇼｜SH-TW, 🇹🇼｜SH-TW®, 🇹🇼｜TW2, 🇹🇼｜SH2-TW, 🇸🇬｜SH-SG®, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix_Letter.png
+available=IEPL-Fallback, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/IEPL.png
+available=SG-Fallback, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/SG.png
+available=US-Fallback, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/US.png
+available=HK-Fallback, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/HK.png
+available=TW-Fallback, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/TW.png
+static=NF-Switch, node1, node2, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix_Letter.png
 #static=Dler, resource-tag-regex=Dler, img-url=https://cdn.jsdelivr.net/gh/Orz-3/mini@master/Color/Dler.png
 
 
