--- a/QuantumultX/QuanXcaColor.conf
+++ b/QuantumultX/QuanXcaColor.conf
@@ -22,7 +22,6 @@ server=182.254.116.116
 static=Apple, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Apple_1.png
 static=AppStore, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/App_Store.png
 static=Netflix, NF-Switch, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Netflix.png
-#static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
 static=YouTube, IEPL-Fallback, HK-Fallback, TW-Fallback, SG-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/YouTube.png
 #static=IPInfo, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Domestic.png
 static=Amazon, proxy, HK-Fallback, SG-Fallback, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Prime_Video_1.png
@@ -31,6 +30,7 @@ static=HBO, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure
 static=Peacock, proxy, US-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Peacock_1.png
 static=ViuTV, proxy, SG-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Viu.png
 static=Emby, proxy, HK-Fallback, US-Fallback, IEPL-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Emby.png
+static=Spotify, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Spotify.png
 static=IPTV, proxy, HK-Fallback, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/ViuTV.png
 #static=Telegram, Outside, direct, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Telegram.png
 #static=Microsoft, direct, Outside, img-url=https://cdn.jsdelivr.net/gh/Koolson/Qure@master/IconSet/Color/Microsoft.png
@@ -93,7 +93,7 @@ https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/IPTV.list, tag=IP
 #https://cdn.jsdelivr.net/gh/promayi/jzrules@master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/HBO/HBO.list, tag=HBO, enabled=true
 https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Peacock/Peacock.list, tag=Peacock, enabled=true
-#https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Spotify/Spotify.list, tag=Spotify, enabled=true
+https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/QuantumultX/Spotify/Spotify.list, tag=Spotify, enabled=true
 
 [filter_local]
 ;host, mb3admin.com, direct
