--- a/QuantumultX/QuanxJW.conf
+++ b/QuantumultX/QuanxJW.conf
@@ -82,7 +82,7 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Amazon.list, tag=Amazon, enabled=true
 https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Disney%2B.list, tag=Disney+, enabled=true
-#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, update-interval=172800, opt-parser=false, enabled=true
+#https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Emby.list, tag=Emby, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/IPTV.list, tag=IPTV, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Unbreak.list, tag=Unbreak, enabled=true
 #https://raw.githubusercontent.com/promayi/jzrules/master/QuantumultX/Cloudflare.list, tag=Cloudflare, enabled=true
