--- a/Quantumult/Pro.conf
+++ b/Quantumult/Pro.conf
@@ -185,6 +185,32 @@ DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,ads.internal.unity3d.com,REJECT
 DOMAIN-SUFFIX,ads.prd.ie.internal.unity3d.com,REJECT
 DOMAIN-SUFFIX,unityads.unity3d.com,REJECT
+
+# > AppleTV
+DOMAIN,hls-amt.itunes.apple.com,AppleTV 专用节点
+DOMAIN,hls.itunes.apple.com,AppleTV 专用节点
+DOMAIN,np-edge.itunes.apple.com,AppleTV 专用节点
+DOMAIN,play-edge.itunes.apple.com,AppleTV 专用节点
+DOMAIN,tv.applemusic.com,AppleTV 专用节点
+DOMAIN,uts-api.itunes.apple.com,AppleTV 专用节点
+DOMAIN-SUFFIX,tv.apple.com,AppleTV 专用节点
+USER-AGENT,AppleTV*,AppleTV 专用节点
+USER-AGENT,com.apple.tv*,AppleTV 专用节点
+PROCESS-NAME,tv,AppleTV 专用节点
+
+# > Apple Music
+DOMAIN,aod-ssl.itunes.apple.com,AppleMusic 专用节点
+DOMAIN,aod.itunes.apple.com,AppleMusic 专用节点
+DOMAIN,audio-ssl.itunes.apple.com,AppleMusic 专用节点
+DOMAIN,audio.itunes.apple.com,AppleMusic 专用节点
+DOMAIN,mvod.itunes.apple.com,AppleMusic 专用节点
+DOMAIN,streamingaudio.itunes.apple.com,AppleMusic 专用节点
+DOMAIN-SUFFIX,applemusic.com,AppleMusic 专用节点
+DOMAIN-SUFFIX,blobstore.apple.com,AppleMusic 专用节点
+DOMAIN-SUFFIX,music.apple.com,AppleMusic 专用节点
+USER-AGENT,Music*,AppleMusic 专用节点
+PROCESS-NAME,music,AppleMusic 专用节点
+
 # > Alibaba
 DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
